# fossenCD

./: .oxlintrc.json  README.md  docker-compose.yml  index.html  package.json  vite.config.ts
backend/: .air.toml  Cargo.toml  Dockerfile  README.md  go.mod  go.sum
backend/.cargo/: config.toml
backend/cmd/mint/: main.go
backend/cmd/passwd/: main.go
backend/cmd/server/: main.go
backend/internal/auth/: auth.go
backend/internal/config/: config.go
backend/internal/server/: auth.go  projects.go  server.go
backend/internal/service/: auth.go  auth_test.go  errors.go  projects.go  projects_test.go  service.go  service_test.go
backend/internal/store/: errors.go  project.go  project_member.go  project_store.go  session.go  store.go  user.go  user_store.go
backend/internal/teamtype/: address.go  address_test.go  host.go  host_test.go  joincode.go  joincode_test.go
backend/src/: api.rs  config.rs  main.rs  registry.rs
docs/: main.typ
docs/sections/: comments.typ  hosting.typ  identity.typ  overview.typ
frontend/: .oxfmtrc.json  Dockerfile  package.json  vite.config.ts
frontend/e2e/: auth.spec.ts  projects.spec.ts
frontend/src/: App.vue  main.ts  vfs.ts
frontend/src/assets/: design-system.css
frontend/src/client/: index.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/: AppHeader.vue  BaseDialog.vue  CreateProjectDialog.vue  EditorWorkspace.vue  (+7 more)
nginx/: development.conf
src/components/: TeamtypeEditor.vue
src/router/: index.ts
src/stores/: teamtype.ts
src/teamtype/: codepoints.ts  collab.ts  types.ts
src/views/: EditorView.vue
(+29 files in other folders)
