# SPDX-FileCopyrightText: 2026 HumanoidSandvichDispenser <humanoidsandvichdispenser@gmail.com>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "fossencd-server"
description = "Always-on, multi-project sync server for fossenCD (one Teamtype peer per project)."
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "AGPL-3.0-or-later"
publish = false

[[bin]]
name = "fossencd-server"
path = "src/main.rs"

[dependencies]
# default-features = false to avoid cli deps
teamtype = { path = "../../teamtype/crates/teamtype", default-features = false }
anyhow = "1"
tracing = "0.1"
serde_json = "1"
axum = "0.8"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "signal", "net", "time", "sync"]

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["ansi", "fmt", "env-filter"]
